--- a/website/work.html
+++ b/website/work.html
@@ -7,14 +7,13 @@
     <title>FLL Bot Programmer</title>
     <link rel="stylesheet" href="./work.css">
 </head>
-<body class="bg-darkstar text-white">
+<body class="bg-darkstar">
     <main class="main-layout">
         <!-- Editor Panel -->
         <section class="editor-panel card">
             <div class="card-header">
                 <span>Editor</span>
                 <button id="copy-button" class="icon-btn" title="Copy">
-                    <!-- Copy SVG icon -->
                     <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
                         <rect x="6" y="6" width="12" height="12" rx="4" stroke="#fff" stroke-width="2"/>
                         <rect x="2" y="2" width="12" height="12" rx="4" stroke="#fff" stroke-width="2"/>
@@ -33,7 +32,6 @@
                     <button id="run-button" class="sim-btn">Run</button>
                     <span>Robot Simulation</span>
                     <button id="reset-button" class="icon-btn" title="Reset">
-                        <!-- Reset SVG icon -->
                         <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
                             <path d="M11 3a8 8 0 1 1-8 8" stroke="#fff" stroke-width="2" fill="none"/>
                             <polyline points="3,7 3,3 7,3" stroke="#fff" stroke-width="2" fill="none"/>
