--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,7 +46,7 @@
                 Hi, I'm Sid Ag, <br> a Passionate Web Developer.
             </h1>
             <div class="flex justify-center mb-8">
-                <img src="https://googleusercontent.com/file_content/0" alt="Sid Ag Portfolio Logo" class="w-48 h-48 sm:w-64 sm:h-64 object-contain">
+                <img src="1.png" alt="Sid Ag Portfolio Logo" class="w-48 h-48 sm:w-64 sm:h-64 object-contain">
             </div>
             <a href="#projects" class="inline-block bg-white text-blue-700 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100">
                 View My Work
@@ -88,7 +88,7 @@
                 </div>
                 <!-- Block Coding -->
                 <div class="flex flex-col items-center justify-center p-4 bg-white rounded-xl shadow-lg">
-                    <img src="hhttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7mVCTQw7_duBfPrIuCg-o8Ue-dPXtvHkn7Q&s" class="h-16 w-16 object-contain">
+                    <img src="https://img.itch.zone/aW1nLzE2MzM0Mjg5LnBuZw==/original/o/iYuv.png" class="h-16 w-16 object-contain">
                     <span class="text-lg font-semibold mt-2 text-gray-900">Block Coding</span>
                 </div>
                 <!-- Spike Prime -->
