--- a/website/hello.html
+++ b/website/hello.html
@@ -256,7 +256,7 @@
             <a href="https://agsid.github.io/website/doc.html" target="_blank">
                 <ion-icon name="help-circle-outline" class="text-3xl cursor-pointer transition-colors duration-200"></ion-icon>
             </a>
-            <a href="https://agsid.github.io/index.html" target="_blank">
+            <a href="https://agsid.github.io/website/index.html" target="_blank">
                 <ion-icon name="home-outline" class="text-3xl cursor-pointer transition-colors duration-200"></ion-icon>
             </a>
             <ion-icon name="cog-outline" id="theme-mode-toggle" class="text-3xl cursor-pointer transition-colors duration-200"></ion-icon>
