--- a/website/abtus.html
+++ b/website/abtus.html
@@ -18,7 +18,7 @@
     <style>
         body {
             /* Updated background image for a starry, less tinted look */
-            background-image: url('https://images.wallpaperscraft.com/image/single/starry_sky_galaxy_glitter_118638_800x600.jpg'); 
+            background-image: url(./images/bgabtus.png'); 
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
