--- a/website/abtus.html
+++ b/website/abtus.html
@@ -18,7 +18,7 @@
     <style>
         body {
             /* Updated background image for a starry, less tinted look */
-            background-image: url(./images/bgabtus.png'); 
+            background-image: url(./images/bgabtus (1).jpg'); 
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
