--- a/website/navbar.html
+++ b/website/navbar.html
@@ -98,6 +98,7 @@
             <a href="./abtus.html">Members</a>
             <a href="./seasons.html">Seasons</a>
             <a href="./robot.html">Robot Design</a>
+            <a href="./hello.html"style="background-color:blue;">AlliedWork</a>
         </div>
     </nav>
 
