--- a/website/navbar.html
+++ b/website/navbar.html
@@ -94,7 +94,7 @@
             <span class="logo-dots"><img src ="./images/Allied-Algorithms_logo.svg"></span> Allied
         </div>
         <div class="navbar-links">
-            <a href="./index.html" class="current-page">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./abtus.html">Members</a>
             <a href="./seasons.html">Seasons</a>
             <a href="./robot.html">Robot Design</a>
