--- a/website/missions.html
+++ b/website/missions.html
@@ -5,98 +5,129 @@
     <script src="missions.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allied Algorithms - Missions</title>
+    <title>Allied Algorithms - Unearthed Missions</title>
 
-    <link rel="apple-touch-icon" sizes="500x500" href="./images/logo.png">
     <link rel="icon" type="image/x-icon" href="./images/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
 
     <style>
         body {
+            background-image: url('./images/bgabtus (1).jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
             font-family: 'Inter', sans-serif;
-            background-color: #1a202c;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
+            box-sizing: border-box;
+            color: #fff; /* Ensure text is white against the dark background */
         }
 
-        main {
-            padding-top: 75px;
-            flex-grow: 1;
-        }
-
+        /* Styles for the mission cards */
         .mission-card {
-            background-color: #fff;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            margin-bottom: 30px;
+            background-color: rgba(10, 10, 20, 0.7); /* Darker, semi-transparent background */
+            border-radius: 2rem;
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            padding: 2rem;
+            margin-bottom: 2rem; /* Spacing between cards */
             display: flex;
-            flex-direction: column;
-        }
-
-        @media (min-width: 768px) {
-            .mission-card {
-                flex-direction: row;
-            }
-
-            .mission-card.reverse-order {
-                flex-direction: row-reverse;
-            }
+            flex-direction: column; /* Stack content vertically on small screens */
+            align-items: center; /* Center items horizontally */
+            text-align: center;
         }
 
         .mission-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.6);
         }
 
-        .mission-card img {
+        .mission-image-container {
             width: 100%;
-            height: 250px;
-            object-fit: contain;
-            background-color: #e5e7eb;
+            max-width: 400px; /* Max width for image/video container */
+            border-radius: 1rem;
+            overflow: hidden;
+            margin-bottom: 1.5rem;
+            background-color: #0d47a1; /* Blue background for the "Mission 1 Pic" area */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 250px; /* Ensure some height even if no image is loaded */
+            position: relative; /* For video iframe positioning */
         }
 
-        @media (min-width: 768px) {
-            .mission-card img {
-                width: 40%;
-                height: auto;
-                max-height: 300px;
-            }
+        .mission-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .mission-video-wrapper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .mission-video-wrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         .mission-content {
-            padding: 25px;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            width: 100%;
+            max-width: 600px; /* Max width for text content */
+            text-align: left; /* Align text to the left */
         }
 
         .mission-content h1 {
-            font-size: 2.2rem;
+            font-size: 1.8rem;
             font-weight: 700;
-            color: #0d47a1;
-            margin-bottom: 5px;
+            color: #fff;
+            margin-bottom: 0.5rem;
         }
 
-        .mission-content h4 {
-            font-size: 1.3rem;
+        .mission-content a {
+            color: #90cdf4; /* Light blue for links */
+            text-decoration: none;
             font-weight: 600;
-            color: #4a4a4a;
-            margin-bottom: 15px;
+            display: block; /* Make link take full width */
+            margin-bottom: 0.5rem;
+        }
+
+        .mission-content a:hover {
+            text-decoration: underline;
         }
 
         .mission-content p {
             font-size: 1rem;
             line-height: 1.6;
-            color: #555;
+            color: #e2e8f0; /* Lighter white for descriptions */
+            margin-bottom: 0.5rem;
+        }
+
+        /* Responsive adjustments */
+        @media (min-width: 768px) {
+            .mission-card {
+                flex-direction: row; /* Horizontal layout on larger screens */
+                text-align: left;
+                align-items: flex-start; /* Align items to the start of the cross axis */
+            }
+
+            .mission-image-container {
+                margin-right: 2rem;
+                margin-bottom: 0;
+                flex-shrink: 0; /* Prevent image from shrinking */
+                max-width: 350px; /* Adjust as needed for larger screens */
+            }
+
+            .mission-content {
+                flex-grow: 1; /* Allow content to take remaining space */
+            }
         }
     </style>
 
@@ -117,6 +148,12 @@
         document.addEventListener('DOMContentLoaded', function () {
             loadHTML('includedContent', 'navbar.html');
             loadHTML('Content', 'footer.html');
+            // Call renderMissions from missions.js after DOM is loaded
+            if (typeof renderMissions === 'function') {
+                renderMissions();
+            } else {
+                console.error("renderMissions function not found. Ensure missions.js is loaded correctly.");
+            }
         });
     </script>
 </head>
@@ -124,12 +161,14 @@
 <body>
     <div id="includedContent"></div>
 
-    <main class="container mx-auto px-4 py-12 text-white">
-        <section>
-            <h2 class="text-3xl font-bold text-white-1000 mb-8 text-center">FIRST LEGO League Missions</h2>
-            <div id="missions-container">
-            </div>
+    <main class="container mx-auto px-4 py-12">
+        <section class="text-center mb-10">
+            <h2 class="text-4xl font-extrabold text-white mb-4">FIRST LEGO League Unearthed Missions</h2>
+            <p class="text-lg text-gray-300">Explore the challenges and accomplishments of the Unearthed season!</p>
         </section>
+
+        <div id="missions-container" class="flex flex-col items-center">
+            </div>
 
     </main>
     <div id="Content"></div>
