--- a/website/navbar.html
+++ b/website/navbar.html
@@ -19,7 +19,7 @@
           top: 20px;
           left: 50%;
           transform: translateX(-50%);
-          width: 90%;
+          width: 95%;
           max-width: 1200px;
           z-index: 20;
           display: flex;
@@ -97,6 +97,7 @@
         <a href="./abtus.html">Members</a>
         <a href="./seasons.html">Seasons</a>
         <a href="./robot.html">Robot Design</a>
+        <a href="./missions.html">Missions</a>
         <a href="./hello.html" style="background-color:#2F9BEE;">AlliedWork</a>
       </div>
     </nav>
